Search results icons spacing fixed

--- a/public/src/application.scss
+++ b/public/src/application.scss
@@ -2491,7 +2491,6 @@ a.page_title{
 			height:16px;
 			margin-left:4px;
 			margin-top:5px;
-			left:0px;
 		}
 		a{
 			display:block;
